cleanup TestLoggerFactory
GitOrigin-RevId: b22d2e917d7deddd39d86b100cd92409aa201cd2